returns on sale

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
 		
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li><a href="<%= new_sale_url %>"><i class="icon-upload"></i>&#160;Upload</a></li>
+              <li><a href="<%= new_sale_url %>">Upload</a></li>
               <li><a href="/page/about">About</a></li>
               <li><a href="/page/merchants-intro">Merchants</a></li>
               <li><a href="<%= edit_user_url("self") %>">Profile</a></li>
