--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,9 @@
           </div>
 
 
+          <center>
           <a class="brand" href="/"><img src="/assets/Logo_Website_v2.png" height="34" width="180" /></a>
+          </center>
 		
           <div class="nav-collapse collapse">
             <ul class="nav">
