fix compiled css/js

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,8 @@
     <meta name="author" content=""> 
    
     <%= javascript_include_tag 'application' %>
-    <%= javascript_include_tag 'bootstrap.min.js' %>
 
-    <%= stylesheet_link_tag 'bootstrap.css' %>
-    <%= stylesheet_link_tag 'jess.css' %>
-    <%= stylesheet_link_tag 'bootstrap-responsive.css' %>
+    <%= stylesheet_link_tag 'application' %>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
