--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -42,7 +42,9 @@
 
         </span>
 
-        <a href="<%= my_faves_url %>"><img src="/assets/favescript3.png" width="73px" height="22px" class="pull-right"></a>
+        <a href="<%= my_faves_url %>">
+          <%= image_tag "favescript3.png", :width => 73, :height => 22, :class => "pull-right" %>
+      </a>
 
 
       </div>
