--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,9 @@
 
 
           <center>
-          <a class="brand" href="/"><img src="/assets/Logo_Website_v2.png" height="34" width="180" /></a>
+            <a class="brand" href="/">
+              <%= image_tag 'Logo_Website_v2.png', :height => 34, :width => 180 %>
+            </a>
           </center>
 		
           <div class="nav-collapse collapse">
