--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -37,7 +37,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="/"><img src="/assets/Logo_Website_v2.png" height="34" width="180" /></a>
+          <a class="brand" href="/">
+            <%= image_tag 'Logo_Website_v2.png', :height => 34, :width => 180 %>
+        </a>
 		
           <div class="nav-collapse collapse">
             <ul class="nav">
