--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -71,19 +71,20 @@
     <% unless detail %>
       <span class="modal-social">
         <a href="#" onclick="fave(<%= sale.id %>); return false">
-          <% heart_src = (sale.my_fave_id ? "/assets/heart_16_16.png" : 
-                          "http://s3.amazonaws.com/mst-images-shared/heart_outline.png") %>
+          <% heart_src = (sale.my_fave_id ? image_tag("heart_16_16.png") : 
+                          image_tag("heart_outline.png")) %>
           <img id="fave_icon_<%= sale.id %>" src="<%= heart_src %>" height="16px" width="16px">&#160;&#160;
         </a>
       <a href="<%= sale_url(sale.id) %>">
-        <img src="/assets/comments_web.png" height="16px" width="16px">
+        <%= image_tag "comments_web.png", :height => 16, :width => 16 %>
         &#160;&#160;
       </a>
       <a href="<%= fb_share_url(sale) %>">
-        <img src="/assets/f_logo.png" height="16px" width="16px">&#160;&#160;
+        <%= image_tag "f_logo.png", :height => 16, :width => 16 %>
+        &#160;&#160;
       </a>
       <a href="<%= twitter_share_url(sale) %>">
-        <img src="/assets/T_logo.png" height="16px" width="16px">
+        <%= image_tag "T_logo.png", :height => 16, :width => 16 %>        
       </a>
     </span>
   <% end %>
@@ -175,11 +176,12 @@ jQuery(function($) {
 
     <% if detail %>
       <br>
-    <a href="<%= fb_share_url(sale) %>">
-      <img src="/assets/f_logo.png" height="16px" width="16px">&#160;&#160;
+      <a href="<%= fb_share_url(sale) %>">
+        <%= image_tag "f_logo.png". :height => 16, :width => 16 %>
+        &#160;&#160;
     </a>
     <a href="<%= twitter_share_url(sale) %>">
-      <img src="/assets/T_logo.png" height="16px" width="16px">
+      <%= image_tag "T_logo.png", :height => 16, :width => 16 %>
     </a>
     <font size="4">&#160;#mysaletable</font>
 
