--- a/app/views/sales/_sale_detail.html.erb
+++ b/app/views/sales/_sale_detail.html.erb
@@ -71,9 +71,10 @@
     <% unless detail %>
       <span class="modal-social">
         <a href="#" onclick="fave(<%= sale.id %>); return false">
-          <% heart_src = (sale.my_fave_id ? image_tag("heart_16_16.png") : 
-                          image_tag("heart_outline.png")) %>
-          <img id="fave_icon_<%= sale.id %>" src="<%= heart_src %>" height="16px" width="16px">&#160;&#160;
+          <% heart_src = (sale.my_fave_id ? "heart_16_16.png" : 
+                                            "heart_outline.png") %>
+          <%= image_tag heart_src, :id => "fave_icon_#{sale.id}", :height => 16, :width => 16 %>
+          &#160;&#160;
         </a>
       <a href="<%= sale_url(sale.id) %>">
         <%= image_tag "comments_web.png", :height => 16, :width => 16 %>
@@ -177,7 +178,7 @@ jQuery(function($) {
     <% if detail %>
       <br>
       <a href="<%= fb_share_url(sale) %>">
-        <%= image_tag "f_logo.png". :height => 16, :width => 16 %>
+        <%= image_tag "f_logo.png", :height => 16, :width => 16 %>
         &#160;&#160;
     </a>
     <a href="<%= twitter_share_url(sale) %>">
