--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -10,12 +10,9 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     -->
 	
-    <%= javascript_include_tag 'application' %>
-    <%= javascript_include_tag 'bootstrap.min.js' %>
-
-    <%= stylesheet_link_tag 'bootstrap.css' %>
-    <%= stylesheet_link_tag 'jess.css' %>
-    <%= stylesheet_link_tag 'bootstrap-responsive.css' %>
+    <%= javascript_include_tag 'application' %>    
+    <%= stylesheet_link_tag 'application' %>
+    
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
