--- a/app/views/layouts/prelogin.html.erb
+++ b/app/views/layouts/prelogin.html.erb
@@ -34,9 +34,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
+          <center>
           <a class="brand" href="/">
             <%= image_tag 'Logo_Website_v2.png', :height => 34, :width => 180 %>
-        </a>
+          </a>
+        </center>
 		
           <div class="nav-collapse collapse">
             <ul class="nav">
