--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -61,8 +61,8 @@
 		<ul class="media-list">
 		  
 		    <div class="media-body">
-		      <center><p><font size="6">Create an account to use MySaleTable</font></p><br>
-			<p class="muted">Sign in with</p></center>
+          <center><p><font size="6">Create an account</font></p><br>
+            <p>With</p></center>
 			<br>
       <center>
         <ul class="buttons">
@@ -71,9 +71,9 @@
         </ul>
       </center>
 
-			<br><br>
-      <center><p>Sign in with <a href="<%= new_user_url %>"><u>your email</u></a>.</center>
-		     
+      <br>
+      <center><p>Or <a href="<%= new_user_url %>"><u>your email</u></a>.</center><br>
+		    <center><p>Merchants click <u><a href="/merchants/new">here</a></u>.</p></center> 
 		     </div>
 		    </div>
 		  
