contact form tweaks

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -4,13 +4,9 @@ body {
 }
 </style>
 <div class="container">
-  <div class="span9">
+  <div class="span2"></div>
+  <div class="span8">
 <div class="marketing contact">
-  <p class="pull-right contact-info">
-  3450 Sacramento Street #231<br>
-  San Francisco, CA 94118<br>
-  Call Toll Free 888-383-7586<br>
-  <a href="mailto:hi@mysaletable.com">hi@mysaletable.com</a></p>
   <p><font size="8">Contact</font></p>
   <h4>Send us a message</h4>
   <%= form_tag(contact_url, :method => "post") do |f| %>
