upload page tweaks

--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -397,7 +397,7 @@ function selectSize(size_id) {
         <div id="dropzone" class="hero-unit">
           <div id="clickHere">
 
-            <center><h3>Drag and drop here</h3></center>
+            <center><h3>Drag and drop photo here</h3></center>
 
             <div class="photoOr">
               or 
@@ -492,7 +492,7 @@ function selectSize(size_id) {
 
                              <span class="add-on">Product</span>
                              <%= text_field_tag "product", params[:product], :class => "span2",
-                               :placeholder => "E.G., Woll Sweater" %>
+                               :placeholder => "E.G., Green Sweater" %>
                              <br><br>
                              </div>
 
