fix css on post button

--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -549,11 +549,10 @@ function selectSize(size_id) {
 
 
                                  <br>
-                                 <div class="postbtn">
-                                   <center>
-                                     <button id="uploady" class="btn btn-large btn-success submit span2" onclick="return false;">Post</button></center>
+                                 <div class="span5"></div>
+                                 <div class="" >
+                                     <button id="uploady" class="btn btn-large btn-success submit span2" onclick="return false;">Post</button>
 
-                                 </center>
 
                                </div>
                              </div>
