--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,7 @@
 <div class="page-header">
 <h1>All Users</h1>
+<br>
+<a class="btn btn-info btn-small" href="<%= export_admin_users_url %>">Export All</a>
 </div>
 
 <table class="table table-bordered table-striped table-hover">
