--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -1,6 +1,10 @@
+<!--
 <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" />
+-->
 
+<%= javascript_include_tag "vendor/jquery-ui" %>
+<%= stylesheet_link_tag "vendor/jquery-ui" %>
 
 <style>
 body {
