--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <% if @title %>
-      <title> MY SALE TABLE - <%= @title %></title>
+      <title> MySaleTable - <%= @title %></title>
     <% else %>
-      <title>MY SALE TABLE</title>
+      <title>MySaleTable</title>
     <% end %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
