fix contact button

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -27,7 +27,7 @@ body {
   </fieldset>
   <label>Message *</label>
   <textarea name="message" rows="10" class="span9"></textarea><br>
-  <button type="submit" class="btn btn-large">Submit</button>
+  <button type="submit" class="btn btn-large btn-success">Submit</button>
 <% end %>
 </div>
 </div>
