--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -104,7 +104,7 @@ function validateAndSubmit() {
         
 
         <a href="#" onclick="return validateAndSubmit()">
-          <button class="btn btn-large" type="submit">Join</button>
+          <button class="btn btn-large btn-success" type="submit">Join</button>
         </a>
         
         <br><br>
