upload sale button reposition

--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -553,9 +553,9 @@ function selectSize(size_id) {
 
 
                                  <br>
-                                 <div class="span5"></div>
-                                 <div class="" >
-                                     <button id="uploady" class="btn btn-large btn-success submit span2" onclick="return false;">Post</button>
+                                 <div class="span4"></div>
+                                 <div class="" style="">
+                                     <button style="margin-left:52px;" id="uploady" class="btn btn-large btn-success submit span2" onclick="return false;">Post</button>
 
 
                                </div>
