no history push state in scrolling

--- a/app/views/sales/_sales.html.erb
+++ b/app/views/sales/_sales.html.erb
@@ -49,7 +49,7 @@ function fave(sale_id) {
             addPage(goToPage-1);
           }
           else {
-            history.pushState({page: currentPage});
+            /* history.pushState({page: currentPage}); */
           }
         }
       });
