--- a/app/views/admin/sales/edit.html.erb
+++ b/app/views/admin/sales/edit.html.erb
@@ -114,6 +114,13 @@ on <%= @sale.created_at.strftime("%b %d, %Y") %>.
             </div>
           </div>
 
+          <div class="control-group">
+            <label class="control-label" for="optionsCheckbox">Editors' Pick</label>
+            <div class="controls">
+              <%= check_box(:sale, :editors_pick) %>
+            </div>
+          </div>
+
 
           <div class="form-actions">
             <button type="submit" class="btn btn-primary">Save changes</button>
