--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -14,7 +14,8 @@
     <link href="/admin/admin-bootstrap.min.css" rel="stylesheet">
     <link href="/admin/admin-bootstrap-responsive.min.css" rel="stylesheet">
     <link href="/admin/admin-bootswatch.css" rel="stylesheet">
-    
+    <link href="/admin/admin.css" rel="stylesheet">
+
     <%= javascript_include_tag "application" %>
   </head>
 
