--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -27,7 +27,7 @@
       <td class="nowrap"><%= user.created_at.strftime("%d %b %Y") %>
       <td><%= user.sales.size %></td>
       <td class="nowrap">
-        <%= link_to 'View', admin_user_path(user),
+        <%= link_to 'Edit', edit_admin_user_path(user),
           :class => "btn btn-info btn-small" %>
         <%= link_to 'Delete', admin_user_path(user),
           :confirm => 'Are you 100% positive that you want to delete this user FOREVER?', 
