--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -28,6 +28,8 @@ body {
 
 
             <legend>Edit Account Settings 
+
+              <a href="/logout" class="btn btn-medium pull-right">Logout</a>
         
         </legend>
 
